<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="ptr_pull_to_refresh">Pull to refresh</string>
    <string name="ptr_release_to_refresh">Release to refresh</string>
    <string name="ptr_refreshing">Refreshing…</string>
    <string name="ptr_last_updated">Updated: %1$s</string>
    
    <string name="app_name">Delivery</string>
    
    <string name="username">Username </string>
    <string name="password">Password </string>
    <string name="confirm_password">Confirm Password </string>
    <string name="submit">Submit</string>
    <string name="close">Close</string>
    <string name="prepare">Prepare</string>
    <string name="back">Back</string>
    <string name="categories">Categories</string>
    <string name="from">From:</string>
    <string name="no_items">No items found</string>
    <string name="to">To:</string>
    <string name="allow">Allow</string>
    <string name="title_activity_navigation">Menu</string>
    <string name="title_activity_categories">Categories</string>
    <string name="title_activity_branches">Branches</string>
    <string name="title_activity_add_branch">Add Branch</string>
    <string name="title_activity_users">Users</string>
    <string name="title_activity_order_info">Order Info</string>
    <string name="add">Add</string>
    <string name="personalinfo">Personal Information:</string>
    <string name="preparer">This is preparer</string>
    <string name="opening_hours">Opening Hours</string>
    <string name="clientinfo">Client Info</string>
    <string name="address">Address</string>
    <string name="total">Total</string>
    <string name="status">Status</string>
    <string name="notes">Notes:</string>
    <string name="cancel">Cancel</string>
    <string name="deliveryguy">Delivery Guy</string>
    <string name="preparerguy">Preparer</string>
    <string name="details">Details</string>
    <string name="name">Name</string>
    <string name="minute">min</string>
    <string name="textButton">TextButton</string>
    <string name="selectphoto">Select Photo</string>
    <string name="slash">/</string>
    <string name="priceunit">Price/Unit</string>
    <string name="producticon">Product Icon:</string>
    <string name="estimatedtime">Estimated Time / minute:</string>
    <string name="description">Description:</string>
    <string name="productname">Product Name:</string>
    <string name="selectlanguage">Select Language</string>
    <string name="login">LOGIN</string>
    <string name="products">Products</string>
    <string name="reason">Reason:</string>
    <string name="item">Item</string>
    <string name="textview">TextView</string>
    <string name="checkbox">CheckBox</string>
    <string name="estimation">Estimated Time</string>
    <string name="About">About us</string>
    <string name="home">Home</string>
    <string name="navigation">Navigation Menu</string>
    <string name="Logout">Logout</string>
    <string name="search_hint">Search Here</string>
    <string name="settings">Settings</string>
    <string name="keeploggedin">Keep me Logged in</string>
    <string name="monday">Monday</string>
    <string name="tuseday">Tuseday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="invalednameentered">Invalid Name Entered</string>
    <string name="problemInUserCreate">Problem in Create User</string>
    <string name="youselected">You selected: </string>
    <string name="areaselected">Area selected: </string>
    <string name="selected">Selected</string>
    <string name="editing">Editing: </string>
    <string name="activate">Activate: </string>
    <string name="deactivate">Deactivate: </string>
    <string name="categoryname">Category Name</string>
    <string name="deletethiscat">Delete this Category?</string>
    <string name="deletethisuser">Delete this User?</string>
    <string name="deletethisprod">Delete this Product?</string>
    <string name="wrongcredentials">Wrong Credentialsss</string>
    <string name="exit">Exit</string>
    <string name="exitquest">Are you sure you want to exit?</string>
    <string name="cancelreason">Please enter a reason</string>
    <string name="ordercanceled">Order Canceled</string>
    <string name="forgotpass"><u>Forgot Password?</u></string>
    <string name="enter">Enter</string>
    <string name="catlogo">Category Logo</string>
    <string name="minorder">Minimum Order Amount / L.L</string>
    <string name="deliverycharge">Delivery Charge / L.L</string>
    <string name="passchanged">Password successfully changed</string>

    <string-array name="acc_type">
        <item>Income</item>
        <item>Expense</item>
    </string-array>
    <string-array name="languages">
        <item>English</item>
        <item>Arabic</item>
    </string-array>
    <string-array name="country_arr">
        <item>Afghanistan</item>
        <item>Bangladesh</item>
        <item>Bhutan</item>
        <item>India</item>
        <item>Maldives</item>
        <item>Sri Lanka</item>
        <item>Nepal</item>
        <item>Pakistan</item>
    </string-array>

    <string name="select_location">Select Your location And Business Category</string>
    <string name="select_business">Select A Business Category</string>
    <string name="select_country">Country</string>
    <string name="select_city">City</string>
    <string name="select_area">Area</string>
    <string name="select">Confirm Selection</string>
    <string name="pick">Pick</string>
    <string name="lblCountry">Select Country</string>
    <string name="lblAdd">Add New Mobile Name</string>
    <string name="btnAdd">Add Name</string>
    <string name="txtHint">HTC</string>
    <string name="lblDisp">Select Name</string>
    <string name="lblSubAcc">Select Account Head</string>
    <string name="title_activity_user_info">User Info</string>
    <string name="title_activity_selection">Select Activity</string>
    <string name="country_name">Country Name</string>
    <string name="add_country">Add Country</string>
    <string name="add_city">Add City</string>
    <string name="add_area">Add Area</string>
    <string name="add_business">Add Business</string>
    <string name="title_activity_add_category">Add Category</string>
    <string name="title_activity_orders">Orders</string>
    <string name="title_activity_product">Products</string>
    <string name="title_activity_add_product">Add Product</string>
    <string name="title_activity_old_orders">Old Orders</string>
    <string name="title_activity_old_orders_info">Old Orders Info</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="title_activity_search_results">Search Results</string>
    <string name="title_activity_user_profile">User Profile</string>
    <string name="no_net">No Internet Connection</string>
    <string name="loding">Loading please wait</string>
    <string name="restore_pass">Restore</string>
    <string name="new_orders">New Orders</string>
    <string name="assigned_orders">Assigned Orders</string>
    <string name="prepared_orders">Prepared Orders</string>
    <string name="canceled_orders">Canceled Orders</string>
    <string name="closed_orders">Closed Orders</string>
    <string name="branches">Branches</string>
    <string name="users">Users</string>
    <string name="empty_list">No items</string>
    <string name="open_status">Opened</string>
    <string name="prepared_status">Prepared</string>
    <string name="closed_status">Closed</string>
    <string name="cancelled_status">Cancelled</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="pass_dnt_match">Passwords do not match </string>
    <string name="branch">Branch</string>
    <string name="phonenum">Phone number</string>
    <string name="adminUserPass">Password</string>
    <string name="userrole">User Role</string>
    <string name="invalid_phone">Invalid Phone number</string>
    <string name="admin">Admin</string>
    <string name="lira">L.L</string>
    <string name="from_bigger">Make sure all from is less than to</string>
    <string name="open_missing">Please select FROM And TO</string>
    <string name="invalid_name">Invalid Name</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="invalid_add">Invalid Address</string>
    <string name="invalid_area">Invalid Area</string>
    <string name="invalid_time">Invalid Estimation time</string>
    <string name="select_role">Please select a role</string>
    <string name="invalid_branch">Please select a branch</string>
    <string name="order_updated">Order updated successfully</string>
    <string name="title_activity_block_user">BlockUser</string>
    <string name="block">Block</string>
    <string name="branchlogo">Branch Logo</string>
    <string name="businesscat">Business Category</string>

    <string-array name="CountryCodes">
        <item>+961,Lebanon</item>
        <item>+961,لبنان</item>
        <item>+962,Jordan</item>
        <item>+962,الاردن</item>
    </string-array>

</resources>