<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/myred"
    android:fillViewport="true"     
	android:paddingBottom="@dimen/activity_vertical_margin"    
	android:paddingLeft="@dimen/activity_horizontal_margin"    
	android:paddingRight="@dimen/activity_horizontal_margin"    
	android:paddingTop="@dimen/activity_horizontal_margin"
     >
    
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="?android:attr/actionBarSize"
    android:background="@drawable/myborder" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        style="@style/mytextview"
        android:text="@string/clientinfo"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="10dp"
        style="@style/mytextview"
        android:text="@string/username" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="10dp"
        style="@style/mytextview"
        android:text="@string/address" />

    <ListView
        android:id="@+id/orderlist"
        android:layout_width="fill_parent"
        android:layout_height="210dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="8dp"
        android:layout_weight="0.64" >
    </ListView>

<TextView
    android:id="@+id/textView4"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBaseline="@+id/total"
    android:layout_alignBottom="@+id/total"
    android:textSize="19sp"
    style="@style/mytextview"
    android:layout_alignRight="@+id/orderbuttons"
    android:text="25000 L.L" />

<TextView
    android:id="@+id/total"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/orderbuttons"
    android:layout_below="@+id/orderlist"
    android:text="@string/total"
    style="@style/mytextview"
    android:textSize="19sp" />

<RelativeLayout
    android:id="@+id/orderbuttons"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/orderlist"
    android:layout_below="@+id/textView4" >

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        style="@style/mytextview"
        android:layout_below="@+id/delivery_Spinner"
        android:text="@string/status" />

    <Spinner
        android:id="@+id/order_status"
        android:layout_width="130dp"
        android:background="@drawable/myspinner"
        android:layout_height="40dp"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        style="@style/mytextview"
        android:text="@string/deliveryguy" />

    <Spinner
        android:id="@+id/delivery_Spinner"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:background="@drawable/myspinner"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView6" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        style="@style/mytextview"
        android:layout_height="wrap_content"
        android:layout_above="@+id/preparer_spinner"
        android:layout_alignLeft="@+id/preparer_spinner"
        android:text="@string/preparer" />

    <Spinner
        android:id="@+id/preparer_spinner"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:background="@drawable/myspinner"
        android:layout_above="@+id/textView5"
        android:layout_alignParentRight="true" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/preparer_spinner"
        android:layout_alignBottom="@+id/order_status"
        android:text="@string/cancel"
        android:background="@drawable/mybutton"
		android:textColor="#ffffff" />

</RelativeLayout>

	<TextView
	    android:id="@+id/notes"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    style="@style/mytextview"
	    android:layout_alignRight="@+id/noteinput"
	    android:layout_below="@+id/orderbuttons"
	    android:layout_marginTop="22dp"
	    android:text="@string/notes" />

	<EditText
	    android:id="@+id/noteinput"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/select"
	    android:layout_below="@+id/notes"
	    android:ems="10"
	    android:background="@drawable/myedittext"
	    android:inputType="text" />

	<Button
	    android:id="@+id/select"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/orderbuttons"
	    android:layout_below="@+id/noteinput"
	    android:text="@string/submit"
	    android:background="@drawable/mybutton"
		android:textColor="#ffffff" />

</RelativeLayout>
</ScrollView>