<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"    
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="70dp"
    android:background="@drawable/itembg" >

    <ImageView
        android:id="@+id/branchlogo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="15dp"
        android:contentDescription="@string/branchlogo"
        android:src="@drawable/moto" />

    <TextView
        android:id="@+id/shopname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/branchlogo"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/branchlogo"
        android:text="@string/branch"
        android:textColor="#3c5a99"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/shopadd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/shopname"
        android:layout_below="@+id/shopname"
        android:textColor="#3c5a99"
        android:text="@string/address" />
    
 </RelativeLayout>
