<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/myred"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_left_margin"
    android:paddingRight="@dimen/activity_left_margin"
    android:paddingTop="@dimen/activity_horizontal_margin" >
	
	<ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scroll">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/myborder"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".UserInfoActivity" >

    <EditText
        android:id="@+id/nameinput"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@drawable/myedittext"
        android:ems="10"
        android:hint="@string/name"
        android:paddingLeft="8dp"
        android:textSize="12sp" />
    
    <RelativeLayout 
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/branchesSP"
        android:layout_marginTop="10dp"
        android:id="@+id/checkboxes"
        android:background="@drawable/myedittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <CheckBox
        android:id="@+id/admin"
        style="@style/mytextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/preparer"
        android:layout_below="@+id/preparer"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="15dp"
        android:button="@drawable/mycheckbox"
        android:text="@string/admin" />

    <CheckBox
        android:id="@+id/preparer"
        style="@style/mytextview"
        android:layout_marginLeft="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/delivery"
        android:layout_marginTop="8dp"
        android:button="@drawable/mycheckbox"
        android:text="@string/preparerguy" />

    <CheckBox
        android:id="@+id/delivery"
        style="@style/mytextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/preparer"
        android:layout_marginTop="15dp"
        android:button="@drawable/mycheckbox"
        android:text="@string/app_name" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textView1"
        style="@style/mytextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inputphone"
        android:layout_marginTop="16dp"
        android:text="@string/branch" />

    <Spinner
        android:id="@+id/branchesSP"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingRight="22dp"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:background="@drawable/myspinner" />

    <EditText
        android:id="@+id/inputphone"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/nameinput"
        android:layout_marginTop="15dp"
        android:background="@drawable/myedittext"
        android:ems="10"
        android:hint="@string/phonenum"
        android:inputType="phone"
        android:paddingLeft="8dp"
        android:textSize="12sp" >

        <requestFocus />
    </EditText>
</RelativeLayout>

</ScrollView>
	<Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
			android:layout_marginTop="10dp"
            android:background="@drawable/mybutton"
            android:layout_below="@+id/scroll"
            android:onClick="addUser"
            android:text="@string/submit"
            android:textColor="#6f6f71"
            android:textSize="18sp" />
</RelativeLayout>