<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="550dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:text="@string/clientinfo"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="10dp"
        android:text="@string/username" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="10dp"
        android:text="@string/address" />

    <ListView
        android:id="@+id/oldorderlist"
        android:layout_width="fill_parent"
        android:layout_height="260dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="8dp"
        android:layout_weight="0.64" >
    </ListView>
    
	<TextView
	    android:id="@+id/textView4"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignBaseline="@+id/total"
	    android:layout_alignBottom="@+id/total"
	    android:textSize="19sp"
	    android:layout_alignRight="@+id/orderbuttons"
	    android:text="25000 L.L" />
	
	<TextView
	    android:id="@+id/total"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/orderbuttons"
	    android:layout_below="@+id/oldorderlist"
	    android:text="@string/total"
	    android:textSize="19sp" />

<RelativeLayout
    android:id="@+id/orderbuttons"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/textView2"
    android:layout_below="@+id/textView4"
    android:layout_marginTop="32dp" >

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/preparer_spinner"
        android:layout_alignLeft="@+id/preparer_spinner"
        android:text="@string/preparerguy" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/deliveryguy" />

    <TextView
        android:id="@+id/delivery_Spinner"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView6"
        android:text="Ahmad Said" />

    <TextView
        android:id="@+id/preparer_spinner"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView6"
        android:text="khalil mohamad" />
</RelativeLayout>
</RelativeLayout>
</ScrollView>

